# nekro-plugin-social-memory

./: DEVELOPMENT.md  README.md  SKILL.md  __init__.py  plugin.py  pre-push-check.sh  pyproject.toml
.github/workflows/: ci.yml
