[project]
name = "nekro-plugin-social-memory"
version = "0.1.0"
description = "整合用户好感度追踪和个性化记忆管理的社交记忆系统"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Yuki", email = "yukiacerium@gmail.com"}
]
keywords = [
    "nekro-agent",
    "social-memory",
    "affection",
    "user-memory",
    "relationship"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "black>=24.0.0",
    "pyright>=1.1.0",
]

[project.urls]
Homepage = "https://github.com/YukiAcerium/nekro-plugin-social-memory"
Repository = "https://github.com/YukiAcerium/nekro-plugin-social-memory"
Issues = "https://github.com/YukiAcerium/nekro-plugin-social-memory/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatchling.build]
include = [
    "/nekro_plugin_social_memory",
    "/__init__.py",
]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors (语法错误)
    "W",      # pycodestyle warnings
    "F",      # pyflakes (未使用的导入/变量)
    "I",      # isort (导入排序)
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade (现代语法)
    "SIM",    # flake8-simplify
    "T20",    # flake8-print (print 语句)
]
ignore = [
    "B008",   # do not perform function calls in argument defaults
    "C901",   # too complex
    "E501",   # line too long (handled by black)
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.black]
line-length = 120
target-version = ["py311"]

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "basic"
